# OpenGLTest

./: .gitignore
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/derongliu/opengltest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/example/derongliu/aidl/: IMyService.aidl  Student.aidl
app/src/main/java/com/example/derongliu/aidl/: MyService.java  Student.java
app/src/main/java/com/example/derongliu/ffmpeg/: FFmpegActivity.java  FFmpegFilter.java  FFmpegUtils.java
app/src/main/java/com/example/derongliu/ffmpeg/decoder/: FFDecoderActivity.java  FFmpegDecoder.java
app/src/main/java/com/example/derongliu/mediacodec/: MediaActivity.java  PreviewFilter.java  RecordFilter.java  Renderer.java
app/src/main/java/com/example/derongliu/mediacodec/decoder/: Decoder.java  MediaDeCoderActivity.java
app/src/main/java/com/example/derongliu/mediacodec/encode/: MediaEncodeActivity.java  YuvLibs.java
app/src/main/java/com/example/derongliu/mediacodec/encoder/: AudioEncoder.java  MediaEncodeActivity.java  MediaEncoder.java  MediaMuxerWrapper.java  VideoEncoder.java  YuvLibs.java
app/src/main/java/com/example/derongliu/mediacodec/libs/: EglCore.java  EglSurfaceBase.java  LocationManager.java  MediaAudioEncoder.java  MediaEncoder.java  MediaMuxerWrapper.java  MediaVideoEncoder.java  WindowSurface.java
app/src/main/java/com/example/derongliu/opengltest/: CameraActivity.java  CameraRender.java  MainActivity.java  MyTextureView.java  OnItemClickListener.java  OpenGLHelper.java  PhotoActivity.java  PhotoRender.java  PhotoRenderTexture.java  TestActivity.java
app/src/main/java/com/example/derongliu/opengltest/camera/: CameraGLSurfaceView.java  GLSurfaceCameraActivity.java  GlSurfaceCameraRender.java
app/src/main/java/com/example/derongliu/opengltest/camera2/: Camera2Activity.java  Camera2Render.java
app/src/main/java/com/example/derongliu/opengltest/customsurfaceview/: CustomGlSurfaceActivity.java  CustomSurfaceView.java  EglHelper.java  GLRenderer.java
app/src/main/java/com/example/derongliu/opengltest/drsurfaceview/: CustomGlSurfaceActivity.java  CustomSurfaceView.java  DRSurfaceView.java  EglHelper.java  GLRenderer.java
app/src/main/java/com/example/derongliu/opengltest/ffmpeg/: FFmpegActivity.java  FFmpegFilter.java  FFmpegUtils.java
app/src/main/java/com/example/derongliu/opengltest/framebuffer/: FBOActivity.java  FBORender.java
app/src/main/java/com/example/derongliu/opengltest/gltriangle/: GlTriangleActivity.java  GlTriangleActivity1.java  (+3 more)
app/src/main/jni/: NdkSurfaceView.cpp  OpenGlUtils.cpp  OpengGlUtils.h  Renderer.cpp  Renderer.h  com_example_derongliu_opengltest_ndk_NdkGlHelper.h  com_example_derongliu_opengltest_ndk_byglsurfaceview_NdkGlHelper.h  com_example_derongliu_opengltest_ndk_bysurfaceview_NdkSurfaceView.h  ndkGlHelper.cpp
app/src/main/jni/ffmpeg/: AACDecoder.cpp  AACDecoder.h  Codec.cpp  com_example_derongliu_ffmpeg_FFmpegUtils.h  com_example_derongliu_opengltest_ffmpeg_FFmpegUtils.h  ffmpegJni.cpp  ffmpegtest.cpp  utils.cpp  utils.h
app/src/main/jni/ffmpeg/decoder/: FFDecoder.cpp  FFDecoder.h  com_example_derongliu_ffmpeg_decoder_FFmpegDecoder.h  decoderJni.cpp
app/src/main/jni/ffmpeg/decondertest264/: Codec.h  H264Decoder.cpp
app/src/main/jni/ffmpeg/encode/: FFEncoder.cpp  FFEncoder.h
app/src/main/res/layout/: activity_camera2.xml  activity_ffdecoder.xml  activity_ffmpeg.xml  activity_gl_triangle.xml  activity_main.xml  activity_media.xml  activity_media_de_coder.xml  activity_media_encode.xml  activity_test.xml  glcamera.xml  main_item.xml  pictureprocess.xml
app/src/main/res/raw/: gltriangle1_vertex.glsl  gltriangle_fragment2.glsl  gltriangle_vertex2.glsl  vertex_shader.glsl
app/src/test/java/com/example/derongliu/opengltest/: ExampleUnitTest.java
(+38 files in other folders)
